# HX-Workflows

./: .gitignore
.github/workflows/: bilibili-token-refresh.yml  tg-orchestrator.yml
bilibili-api/: README.md  __init__.py  api.py  bili_token.py  comment.py  cover.py  pyproject.toml  refresh_token.py  upload_token.py  video.py
bilibili-api/bilibili_api/: __init__.py  _core.py  api.py  bili_token.py  comment.py  cover.py  refresh_token.py  upload_token.py  video.py
emall/: README.md  pyproject.toml  send_tg_report.py
tg/: .gitignore  CONFIGURE.md  LOCAL_QR_LOGIN.md  LOCAL_TG_SIGNER.md  LOCAL_WEB.md  README.md  TELEGRAM_KEYS.md  TG_SIGNER.md  pyproject.toml  run_web.sh  runner.py  signins.yml  tasks.example.yml  tasks.yml
tg/config/: signins.yml  tasks.example.yml  tasks.yml
tg/docs/: CONFIGURE.md  LOCAL_QR_LOGIN.md  LOCAL_TG_SIGNER.md  LOCAL_WEB.md  TELEGRAM_KEYS.md  TG_SIGNER.md
tg/scripts/: enroll_accounts.py  example_task.py  gen_session.py  local_web_api.py  qr_login.py  sign_from_config.py
tg/web/: index.html  package-lock.json  package.json
tg/web/src/: App.tsx  main.tsx  styles.css
